--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/c699a0faeb.js" crossorigin="anonymous"></script>
-    <title>Said Dorcar</title>
+    <title>Said Dorca</title>
     <link rel="icon" href="assets/img/icon/icon.ico">
 </head>
 <body>
